Update: Project for CanvasSomaticCaller.exe

--- a/Src/Canvas/CanvasDiploidCaller/project.json
+++ b/Src/Canvas/CanvasDiploidCaller/project.json
@@ -7,8 +7,9 @@
 
   "dependencies": {
     "CanvasCommon": "1.0.0-*",
+    "Illumina.Common": "2.0.5.80",
     "Isas.Framework": "5.0.3.70",
-    "Isas.SequencingFiles": "3.7.3-O00153FixFileCompres",
+    "Isas.SequencingFiles": "3.7.3.154",
     "Microsoft.NETCore.App": {
       "type": "platform",
       "version": "1.0.1"
