--- a/Src/Canvas/CanvasSomaticCaller/project.json
+++ b/Src/Canvas/CanvasSomaticCaller/project.json
@@ -1,10 +1,12 @@
 {
   "version": "1.0.0-*",
   "buildOptions": {
-    "emitEntryPoint": true
+    "emitEntryPoint": true,
+    "define": [ "DotNetCore" ]
   },
 
   "dependencies": {
+    "CanvasCommon": "1.0.0-*",
     "Illumina.Common": "2.0.5.80",
     "Isas.Framework": "5.0.3.70",
     "Isas.SequencingFiles": "3.7.3.154",
