--- a/Tools/EvaluateCNV/EvaluateCNV.csproj
+++ b/Tools/EvaluateCNV/EvaluateCNV.csproj
@@ -59,16 +59,16 @@
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Illumina.Common, Version=2.0.5.74, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>..\..\Src\Canvas\Canvas\packages\Illumina.Common.2.0.5.74\lib\net451\Illumina.Common.dll</HintPath>
+    <Reference Include="Illumina.Common, Version=2.0.5.80, Culture=neutral, processorArchitecture=AMD64">
+      <HintPath>..\..\Src\Canvas\Canvas\packages\Illumina.Common.2.0.5.80\lib\net451\Illumina.Common.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Isas.Framework, Version=5.0.3.70, Culture=neutral, processorArchitecture=AMD64">
       <HintPath>..\..\Src\Canvas\Canvas\packages\Isas.Framework.5.0.3.70\lib\net451\Isas.Framework.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Isas.SequencingFiles, Version=3.7.3.153, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>..\..\Src\Canvas\Canvas\packages\Isas.SequencingFiles.3.7.3-O00153FixFileCompres\lib\net451\Isas.SequencingFiles.dll</HintPath>
+    <Reference Include="Isas.SequencingFiles, Version=3.7.3.154, Culture=neutral, processorArchitecture=AMD64">
+      <HintPath>..\..\Src\Canvas\Canvas\packages\Isas.SequencingFiles.3.7.3.154\lib\net451\Isas.SequencingFiles.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="NDesk.Options, Version=0.2.1.0, Culture=neutral, processorArchitecture=MSIL">
@@ -111,12 +111,12 @@
     <PostBuildEvent>
     </PostBuildEvent>
   </PropertyGroup>
-  <Import Project="..\..\Src\Canvas\Canvas\packages\Isas.FileCompression.3.7.3-O00153FixFileCompres\build\net451\Isas.FileCompression.targets" Condition="Exists('..\..\Src\Canvas\Canvas\packages\Isas.FileCompression.3.7.3-O00153FixFileCompres\build\net451\Isas.FileCompression.targets')" />
+  <Import Project="..\..\Src\Canvas\Canvas\packages\Isas.FileCompression.3.7.3.154\build\net451\Isas.FileCompression.targets" Condition="Exists('..\..\Src\Canvas\Canvas\packages\Isas.FileCompression.3.7.3.154\build\net451\Isas.FileCompression.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
-    <Error Condition="!Exists('..\..\Src\Canvas\Canvas\packages\Isas.FileCompression.3.7.3-O00153FixFileCompres\build\net451\Isas.FileCompression.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\Src\Canvas\Canvas\packages\Isas.FileCompression.3.7.3-O00153FixFileCompres\build\net451\Isas.FileCompression.targets'))" />
+    <Error Condition="!Exists('..\..\Src\Canvas\Canvas\packages\Isas.FileCompression.3.7.3.154\build\net451\Isas.FileCompression.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\Src\Canvas\Canvas\packages\Isas.FileCompression.3.7.3.154\build\net451\Isas.FileCompression.targets'))" />
   </Target>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
