--- a/Src/Canvas/CanvasCommon/project.json
+++ b/Src/Canvas/CanvasCommon/project.json
@@ -10,8 +10,9 @@
 
   "dependencies": {
     "Combinatorics": "1.0.0-*",
+    "Illumina.Common": "2.0.5.80",
     "Isas.Framework": "5.0.3.70",
-    "Isas.SequencingFiles": "3.7.3-O00153FixFileCompres",
+    "Isas.SequencingFiles": "3.7.3.154",
     "MathNet.Numerics.Core": "3.17.0",
     "NDesk.Options": "2.0.5-O00077Options",
     "NETStandard.Library": "1.6.0"
