--- a/Src/Canvas/CanvasTest/packages.config
+++ b/Src/Canvas/CanvasTest/packages.config
@@ -3,10 +3,10 @@
   <package id="AutoFixture" version="3.50.2" targetFramework="net451" />
   <package id="AutoFixture.AutoNSubstitute" version="3.50.2" targetFramework="net451" />
   <package id="AutoFixture.Xunit2" version="3.50.2" targetFramework="net451" />
-  <package id="Illumina.Common" version="2.0.5.74" targetFramework="net451" />
-  <package id="Isas.FileCompression" version="3.7.3-O00153FixFileCompres" targetFramework="net451" />
+  <package id="Illumina.Common" version="2.0.5.80" targetFramework="net451" />
+  <package id="Isas.FileCompression" version="3.7.3.154" targetFramework="net451" />
   <package id="Isas.Framework" version="5.0.3.70" targetFramework="net451" />
-  <package id="Isas.SequencingFiles" version="3.7.3-O00153FixFileCompres" targetFramework="net451" />
+  <package id="Isas.SequencingFiles" version="3.7.3.154" targetFramework="net451" />
   <package id="NDesk.Options" version="0.2.1" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net451" />
   <package id="NSubstitute" version="1.8.2.0" targetFramework="net451" />
