Enable additional builds

--- a/Src/Canvas/CanvasCommon/project.json
+++ b/Src/Canvas/CanvasCommon/project.json
@@ -9,7 +9,7 @@
   },
 
   "dependencies": {
-    "Combinatorics": "1.0.0-*",
+    "Combinatorics": "1.0.3.2",
     "Illumina.Common": "2.1.1.89",
     "Isas.Framework": "5.3.0.94",
     "Isas.SequencingFiles": "3.10.1.184",
