--- a/Src/Canvas/Canvas.Wrapper/project.json
+++ b/Src/Canvas/Canvas.Wrapper/project.json
@@ -2,8 +2,7 @@
   "version": "1.0.0-*",
 
   "dependencies": {
-    "Canvas": "1.0.0-*",
-    "CanvasCommon": "1.0.0-*",
+    "CanvasCommon.Core": "1.23.0-dev201703091753",
     "ClassicBioinfoTools": "0.0.1.24",
     "Illumina.Common": "2.1.1.89",
     "Isas.Framework": "5.3.0.94",
