--- a/Src/Canvas/CanvasBin/project.json
+++ b/Src/Canvas/CanvasBin/project.json
@@ -6,8 +6,9 @@
   },
 
   "dependencies": {
-    "CanvasCommon": "1.0.0-*",
+    "CanvasCommon.Core": "1.23.0-dev201703091753",
     "Illumina.Common": "2.1.1.89",
+    "Isas.Framework": "5.3.0.94",
     "Isas.Manifests": "2.11.0.33",
     "Isas.SequencingFiles": "3.10.1.184",
     "Microsoft.NETCore.App": {
