--- a/Src/Canvas/CanvasPartition/project.json
+++ b/Src/Canvas/CanvasPartition/project.json
@@ -6,10 +6,11 @@
   },
 
   "dependencies": {
-    "CanvasCommon": "1.0.0-*",
-    "Combinatorics": "1.0.0-*",
+    "CanvasCommon.Core": "1.23.0-dev201703091753",
+    "Combinatorics.Core": "1.23.0-dev201703091753",
     "Illumina.Common": "2.1.1.89",
     "Isas.SequencingFiles": "3.10.1.184",
+    "MathNet.Numerics.Core": "3.17.0",
     "Microsoft.NETCore.App": {
       "type": "platform",
       "version": "1.0.1"
