--- a/Src/Canvas/CanvasSomaticCaller/project.json
+++ b/Src/Canvas/CanvasSomaticCaller/project.json
@@ -6,7 +6,7 @@
   },
 
   "dependencies": {
-    "CanvasCommon": "1.0.0-*",
+    "CanvasCommon.Core": "1.23.0-dev201703091753",
     "Illumina.Common": "2.1.1.89",
     "Isas.Framework": "5.3.0.94",
     "Isas.SequencingFiles": "3.10.1.184",
