--- a/Src/Canvas/Canvas/project.json
+++ b/Src/Canvas/Canvas/project.json
@@ -5,7 +5,7 @@
   },
 
   "dependencies": {
-    "CanvasBin": "1.0.0-*",
+    "CanvasBin.Core": "1.23.0-dev201703091842",
     "CanvasCommon.Core": "1.23.0-dev201703091753",
     "Illumina.Common": "2.1.1.89",
     "Isas.Framework": "5.3.0.94",
