--- a/Src/Canvas/Canvas/Canvas.nuspec
+++ b/Src/Canvas/Canvas/Canvas.nuspec
@@ -25,11 +25,15 @@
     <file src="..\Canvas.Wrapper\Wrapper\bin\x64\Release\Canvas.Wrapper.XML" target="lib\net451" />
     <file src="..\Canvas.Wrapper\Wrapper\bin\x64\Release\Canvas.exe" target="lib\net451" />
     <file src="..\Canvas.Wrapper\Wrapper\bin\x64\Release\CanvasCommon.dll" target="lib\net451" />
-   <!--
-   Commenting out .NET core for now:
+    
+    <!-- .NET core: -->
     <file src="..\Canvas.Wrapper\bin\Release\netcoreapp1.0\Canvas.Wrapper.dll" target="lib/dotnet" />
     <file src="bin\Release\netcoreapp1.0\Canvas.dll" target="lib/dotnet" />
-    -->
-
+    <file src="..\CanvasBin\bin\Release\netcoreapp1.0\CanvasBin.dll" target="lib/dotnet" />
+    <file src="..\CanvasDiploidCaller\bin\Release\netcoreapp1.0\CanvasDiploidCaller.dll" target="lib/dotnet" />
+    <file src="..\CanvasSomaticCaller\bin\Release\netcoreapp1.0\CanvasSomaticCaller.dll" target="lib/dotnet" />
+    <file src="..\CanvasPartition\bin\Release\netcoreapp1.0\CanvasPartition.dll" target="lib/dotnet" />
+    <!-- TODO: Add CanvasSNV, CanvasClean, CanvasNormalize-->
+    
   </files>
 </package>
