--- a/Src/Canvas/CanvasSomaticCaller/CanvasSomaticCaller.net45/packages.config
+++ b/Src/Canvas/CanvasSomaticCaller/CanvasSomaticCaller.net45/packages.config
@@ -4,6 +4,7 @@
   <package id="Isas.FileCompression" version="3.10.1.184" targetFramework="net451" />
   <package id="Isas.Framework" version="5.3.0.94" targetFramework="net451" />
   <package id="Isas.SequencingFiles" version="3.10.1.184" targetFramework="net451" />
+  <package id="MathNet.Numerics" version="3.17.0" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net451" />
   <package id="protobuf-net" version="2.1.0" targetFramework="net451" />
 </packages>
