--- a/Tools/EvaluateCNV/EvaluateCNV.net45/EvaluateCNV.net45.csproj
+++ b/Tools/EvaluateCNV/EvaluateCNV.net45/EvaluateCNV.net45.csproj
@@ -49,7 +49,7 @@
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
-    <OutputPath>..\x64\Release\Tools\EvaluateCNV\</OutputPath>
+    <OutputPath>..\..\x64\Release\Tools\EvaluateCNV\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <Optimize>true</Optimize>
     <DebugType>pdbonly</DebugType>
