--- a/Src/Canvas/CanvasBin/CanvasBin.net45/CanvasBin.net45.csproj
+++ b/Src/Canvas/CanvasBin/CanvasBin.net45/CanvasBin.net45.csproj
@@ -67,7 +67,7 @@
     <Optimize>false</Optimize>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
-    <OutputPath>..\x64\Release\</OutputPath>
+    <OutputPath>..\..\x64\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <Optimize>false</Optimize>
     <DebugType>pdbonly</DebugType>
