--- a/Src/Canvas/CanvasClean/CanvasClean.net45/CanvasClean.net45.csproj
+++ b/Src/Canvas/CanvasClean/CanvasClean.net45/CanvasClean.net45.csproj
@@ -64,7 +64,7 @@
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
-    <OutputPath>..\x64\Release\</OutputPath>
+    <OutputPath>..\..\x64\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <Optimize>true</Optimize>
     <DebugType>pdbonly</DebugType>
