--- a/Src/Canvas/CanvasPartition/CanvasPartition.net45/CanvasPartition.net45.csproj
+++ b/Src/Canvas/CanvasPartition/CanvasPartition.net45/CanvasPartition.net45.csproj
@@ -65,7 +65,7 @@
     <AllowUnsafeBlocks>false</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
-    <OutputPath>..\x64\Release\</OutputPath>
+    <OutputPath>..\..\x64\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <Optimize>false</Optimize>
     <DebugType>pdbonly</DebugType>
