--- a/Src/Canvas/CanvasPedigreeCaller/CanvasPedigreeCaller.net45/CanvasPedigreeCaller.net45.csproj
+++ b/Src/Canvas/CanvasPedigreeCaller/CanvasPedigreeCaller.net45/CanvasPedigreeCaller.net45.csproj
@@ -63,7 +63,7 @@
     <Optimize>true</Optimize>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
-    <OutputPath>..\x64\Release\</OutputPath>
+    <OutputPath>..\..\x64\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <Optimize>false</Optimize>
     <DebugType>pdbonly</DebugType>
