--- a/Src/Canvas/Canvas.Wrapper/project.json
+++ b/Src/Canvas/Canvas.Wrapper/project.json
@@ -2,14 +2,14 @@
   "version": "1.0.0-*",
 
   "dependencies": {
-    "CanvasCommon.Core": "1.23.0-dev201703091753",
-    "CanvasWithoutWrapper.Core": "1.23.0-dev201703091900",
-    "ClassicBioinfoTools": "0.0.1.24",
-    "Illumina.Common": "2.1.1.89",
-    "Isas.Framework": "5.3.0.94",
-    "Isas.Manifests": "2.11.0.33",
+    "CanvasCommon.Core": "1.23.0.6",
+    "CanvasWithoutWrapper.Core": "1.23.0.6",
+    "ClassicBioinfoTools": "0.0.1.35",
+    "Illumina.Common": "2.2.0.95",
+    "Isas.Framework": "5.3.1.101",
+    "Isas.Manifests": "2.12.0.38",
     "Isas.Ploidy": "1.0.2.27",
-    "Isas.SequencingFiles": "3.10.1.184",
+    "Isas.SequencingFiles": "3.10.1.186",
     "Microsoft.NETCore.App": {
       "type": "platform",
       "version": "1.0.1"
