--- a/Src/Canvas/CanvasDiploidCaller/CanvasDiploidCaller.net45/packages.config
+++ b/Src/Canvas/CanvasDiploidCaller/CanvasDiploidCaller.net45/packages.config
@@ -1,13 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Illumina.Common" version="2.1.1.89" targetFramework="net451" />
-  <package id="Isas.FileCompression" version="3.10.1.184" targetFramework="net451" />
-  <package id="Isas.Framework" version="5.3.0.94" targetFramework="net451" />
-  <package id="Isas.SequencingFiles" version="3.10.1.184" targetFramework="net451" />
+  <package id="Illumina.Common" version="2.2.0.95" targetFramework="net451" />
+  <package id="Isas.FileCompression" version="3.10.1.186" targetFramework="net451" />
+  <package id="Isas.Framework" version="5.3.1.101" targetFramework="net451" />
+  <package id="Isas.SequencingFiles" version="3.10.1.186" targetFramework="net451" />
   <package id="Microsoft.CSharp" version="4.0.1" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net451" />
   <package id="protobuf-net" version="2.1.0" targetFramework="net451" />
   <package id="System.Collections" version="4.0.11" targetFramework="net451" />
+  <package id="System.ComponentModel.Primitives" version="4.3.0" targetFramework="net451" />
+  <package id="System.ComponentModel.TypeConverter" version="4.3.0" targetFramework="net451" />
   <package id="System.Diagnostics.Debug" version="4.0.11" targetFramework="net451" />
   <package id="System.Dynamic.Runtime" version="4.0.11" targetFramework="net451" />
   <package id="System.Globalization" version="4.0.11" targetFramework="net451" />
