--- a/Tools/EvaluateCNV/project.json
+++ b/Tools/EvaluateCNV/project.json
@@ -5,9 +5,9 @@
   },
 
   "dependencies": {
-    "CanvasCommon.Core": "1.23.0-dev201703100959",
-    "Illumina.Common": "2.1.1.89",
-    "Isas.SequencingFiles": "3.10.1.184",
+    "CanvasCommon.Core": "1.23.0.6",
+    "Illumina.Common": "2.2.0.95",
+    "Isas.SequencingFiles": "3.10.1.186",
     "Microsoft.NETCore.App": {
       "type": "platform",
       "version": "1.0.1"
