--- a/Src/Canvas/CanvasCommon/project.json
+++ b/Src/Canvas/CanvasCommon/project.json
@@ -9,7 +9,7 @@
   },
 
   "dependencies": {
-    "Combinatorics.Core": "1.23.0.10",
+    "Combinatorics": "1.0.0-*",
     "Illumina.Common": "2.2.0.95",
     "Isas.Framework": "5.3.1.101",
     "Isas.SequencingFiles": "3.10.1.189",
