--- a/Src/Canvas/CanvasBin/project.json
+++ b/Src/Canvas/CanvasBin/project.json
@@ -6,7 +6,7 @@
   },
 
   "dependencies": {
-    "CanvasCommon.Core": "1.23.0.10",
+    "CanvasCommon": "1.0.0-*",
     "Illumina.Common": "2.2.0.95",
     "Isas.Framework": "5.3.1.101",
     "Isas.Manifests": "2.12.0.38",
