--- a/Src/Canvas/Canvas/Canvas.csproj
+++ b/Src/Canvas/Canvas/Canvas.csproj
@@ -20,7 +20,7 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <OutputPath>..\..\x64\CanvasCore\</OutputPath>
+    <OutputPath>..\x64\CanvasCore\</OutputPath>
   </PropertyGroup>
 
   <ItemGroup>
