--- a/Src/Canvas/CanvasNormalize/CanvasNormalize.csproj
+++ b/Src/Canvas/CanvasNormalize/CanvasNormalize.csproj
@@ -19,7 +19,7 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <OutputPath>..\..\x64\CanvasCore\</OutputPath>
+    <OutputPath>..\x64\CanvasCore\</OutputPath>
   </PropertyGroup>
 
   <ItemGroup>
